# lc

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  lc.h  main.cpp
tests/: CMakeLists.txt  catch.hpp  prog.lc  simple.lc  test.cpp  tests.cpp
